# rust-pong-game

./: Cargo.toml  Readme.md
.fleet/: run.json
assets/textures/: break-out.png:Zone.Identifier
src/: camera.rs  main.rs
src/game_window/: mod.rs
src/gui/: mod.rs
src/physics/: mod.rs
src/player/: mod.rs
src/scoreboard/: Scoreboard_Structs.rs  mod.rs  scoreboard.rs  update_scoreboard.rs
