[package]
name = "bevy-breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enableasmall amounnt of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable huge optimizations for dependecies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version="0.11.3", features=["dynamic_linking"]}
